--- a/Paciente.html
+++ b/Paciente.html
@@ -18,7 +18,7 @@
         <!-- Parte de abajo -->
         <div class="DashFoot">
             <div class="DashFootItem">
-                <img src="/assets/undraw_doctors_hwty.svg" alt="">
+                <img src="/img/undraw_doctors_hwty.svg" alt="">
             </div>
         </div>
         <!-- Parte de arriba -->
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="ContTopImg">
-                    <img src="/assets/medic.png" alt="">
+                    <img src="/img/medic.png" alt="">
                 </div>
             </div>
 
