Ajustes a opciones en DashBoard paciente/medico

--- a/Paciente.html
+++ b/Paciente.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/paciente.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="stylesheet" href="/icons/fontawesome/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
@@ -37,6 +38,10 @@
                 </div>
                 <p>Información covid</p> 
             </div>
+            <ul class="submenu__Covid">
+                <li class="submenu__Covid-item"><a href="#">Actualidad covid</a></li>
+                <li class="submenu__Covid-item"><a href="#">Vacunación</a></li>         
+            </ul>
  
             <div class="DashBItem">
                 <div class="icons">
@@ -59,8 +64,7 @@
                 Información personal
             </div>
             <ul class="submenu__infoPersonal">
-                <li class="submenu__infoPersonal-item"><a href="#">Carnet</a></li>
-                <li class="submenu__infoPersonal-item"><a href="#">Opcion2</a></li>         
+                <li class="submenu__infoPersonal-item"><a href="#">Carnet</a></li>       
             </ul>
 
             <div class="DashBItem">
@@ -69,6 +73,10 @@
                 </div>
                 Actualiza tus datos
             </div>
+            <ul class="submenu__Datos">
+                <li class="submenu__Datos-item"><a href="#">Subir documentos</a></li>
+                <li class="submenu__Datos-item"><a href="#">Editare información</a></li>         
+            </ul>
         </div>
 
     </div>
