--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <div class="header__logo">
                </div>
                 <ul class="header__menu" >
-                    <li class = "header__menu-item"> <a href="#" class="header__menu-item__link blue-color">Iniciar Sesión</a> </li>
+                    <li class = "header__menu-item"> <a href="login.php" class="header__menu-item__link blue-color">Iniciar Sesión</a> </li>
                     <li class = "header__menu-item"><a href="#" class="header__menu-item__link black-color">Contacto</a></li>
                 </ul>
             </header>   
